<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_encontros"
            android:icon="@drawable/ic_photo_library_black_24dp"
            android:title="@string/nav_encontros" />
        <item
            android:id="@+id/nav_inscritos"
            android:icon="@drawable/ic_local_movies_black_24dp"
            android:title="@string/nav_inscritos" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
        </menu>
    </item>

</menu>